--- a/upi/pom.xml
+++ b/upi/pom.xml
@@ -56,7 +56,15 @@
             <artifactId>sonar-maven-plugin</artifactId>
             <version>3.9.1.2186</version>
         </plugin>
-
+<plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-compiler-plugin</artifactId>
+      <version>3.8.1</version>
+      <configuration>
+        <source>11</source>
+        <target>11</target>
+      </configuration>
+    </plugin>
 
         
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
