--- a/upi/pom.xml
+++ b/upi/pom.xml
@@ -56,10 +56,16 @@
       <artifactId>maven-compiler-plugin</artifactId>
       <version>3.8.1</version>
       <configuration>
-        <source>11</source>
-        <target>11</target>
+        <source>1.8</source>
+        <target>1.8</target>
       </configuration>
     </plugin>
+    <plugin>
+      <groupId>org.sonarsource.scanner.maven</groupId>
+      <artifactId>sonar-maven-plugin</artifactId>
+      <version>3.9.1.2186</version>
+    </plugin>
+
 
 
         
